set `max-width` to avoid spillover
#responsive

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,8 @@
 
 $nav-padding: 0.1rem;
 
-* {
+img, embed, object, video {
+  max-width: 100%;
 }
 
 nav {
